cabal-version:      2.4
name:               backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             halfbro
maintainer:         mlagare22@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable backend-app
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        App
      , Channel
      , OnlyWands
      , Routes
      , Twitch
      , Types
      , Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , aeson
      , base64-bytestring
      , bytestring
      , containers
      , hashable
      , http-types
      , jose
      , lens
      , mtl
      , req
      , servant
      , servant-server
      , servant-auth
      , servant-auth-server
      , stm
      , stm-containers
      , stringsearch
      , text
      , unordered-containers
      , wai-cors
      , warp
      , websockets
      , wuss

    hs-source-dirs:   src
    default-language: Haskell2010
